--- a/css/_text.scss
+++ b/css/_text.scss
@@ -18,6 +18,13 @@
   text-transform: capitalize !important;
 }
 
+.ellipsis-text {
+  white-space: nowrap !important;
+  text-overflow: ellipsis !important;
+  overflow: hidden !important;
+  white-space: nowrap !important;
+}
+
 .text-al-center {
   text-align: center !important;
 }
