--- a/css/dist.css
+++ b/css/dist.css
@@ -74,6 +74,13 @@
   text-transform: capitalize !important;
 }
 
+.ellipsis-text {
+  white-space: nowrap !important;
+  text-overflow: ellipsis !important;
+  overflow: hidden !important;
+  white-space: nowrap !important;
+}
+
 .text-al-center {
   text-align: center !important;
 }
