adding some basic grid and rename some classes

--- a/css/_bc-colors.scss
+++ b/css/_bc-colors.scss
@@ -1,23 +1,23 @@
 @import "./_variables.scss";
 
-.charcoal-bc {
-  background-color: $charcoal-color !important;
+.fst-bc {
+  background-color: $fst-color !important;
 }
 
-.persian-green-bc {
-  background-color: $persian-green-color !important;
+.snd-bc {
+  background-color: $snd-color !important;
 }
 
-.orange-yellow-crayola-bc {
-  background-color: $orange-yellow-crayola-color !important;
+.trd-bc {
+  background-color: $trd-color !important;
 }
 
-.sandy-brown-bc {
-  background-color: $sandy-brown-color !important;
+.fth-bc {
+  background-color: $fth-color !important;
 }
 
-.burnt-sienna-bc {
-  background-color: $burnt-sienna-color !important;
+.fifth-bc {
+  background-color: $fifth-color !important;
 }
 
 .black-bc {
