--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,29 +1,29 @@
 @import "./_variables.scss";
 
-.charcoal-tc {
-  color: $charcoal-color !important;
+.fst-tc {
+  color: $fst-color;
 }
 
-.persian-green-tc {
-  color: $persian-green-color !important;
+.snd-tc {
+  color: $snd-color;
 }
 
-.orange-yellow-crayola-tc {
-  color: $orange-yellow-crayola-color !important;
+.trd-tc {
+  color: $trd-color;
 }
 
-.sandy-brown-tc {
-  color: $sandy-brown-color !important;
+.fth-tc {
+  color: $fth-color;
 }
 
-.burnt-sienna-tc {
-  color: $burnt-sienna-color !important;
+.fifth-tc {
+  color: $fifth-color;
 }
 
 .black-tc {
-  color: $black-color !important;
+  color: $black-color;
 }
 
 .white-tc {
-  color: $white-color !important;
+  color: $white-color;
 }
