--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,7 +1,7 @@
-$charcoal-color: #264653;
-$persian-green-color: #2A9D8F;
-$orange-yellow-crayola-color: #E9C46A;
-$sandy-brown-color: #F4A261;
-$burnt-sienna-color: #E76F51;
+$fst-color: #264653;
+$snd-color: #2A9D8F;
+$trd-color: #E9C46A;
+$fth-color: #F4A261;
+$fifth-color: #E76F51;
 $black-color: black;
 $white-color: white;
