--- a/css/main.scss
+++ b/css/main.scss
@@ -25,56 +25,39 @@ body {
   justify-content: center;
 
   h1,
-  h2, h3 {
+  h2,
+  h3 {
     width: 100%;
   }
 
   section {
     width: 100%;
     padding: 1em;
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
   }
 }
 
 .color-display-container {
-  width: 300px;
-  margin: 1em;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   div {
-    width: 270px;
-    height: 50px;
-    margin: 1em;
-    padding: 0.7em;
+    margin: 1rem 0;
+    padding: 0.5rem;
 
     border: 1px solid rgb(209, 209, 209);
     border-radius: 0.5em;
-
-    font-weight: bold;
-    text-align: center;
   }
 }
 
 .text-container {
-  width: 270px;
-  margin: 1em;
-  padding: 1.5em;
+  padding: 1.5rem;
 
   border: 1px solid rgb(209, 209, 209);
   border-radius: 0.5em;
 }
 
 .box {
-  border: 1px solid $orange-yellow-crayola-tc;
-
-  & .item {
-    width: 40px;
+  width: 100%;
+  &.item {
+    padding: 1rem 0;
+    border: 1px solid $fst-color;
+    background-color: $fifth-color;
   }
 }
