--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -5,3 +5,9 @@ $fth-color: #F4A261;
 $fifth-color: #E76F51;
 $black-color: black;
 $white-color: white;
+
+$base-spacing: 4px;
+
+$sm-size: 1px;
+$md-size: 768px;
+$lg-size: 1024px;
