--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,10 @@
 @import "./text";
 @import "./tag";
 @import "./grid";
+@import "./color-base-properties";
+@import "./size-base-properties";
 @import "./buttons";
+@import "./form";
 
 html,
 body {
