--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -28,6 +28,7 @@
     float: left;
     box-sizing: border-box;
     min-height: 1px;
+    // height: auto;
     padding: 0 $spacing-3;
     margin: ($spacing-3 / 2) 0;
   }
