--- a/css/main.css
+++ b/css/main.css
@@ -331,112 +331,166 @@
 }
 
 .form-group {
-  margin-bottom: 1em;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  position: relative;
+  margin-bottom: 2rem;
 }
 
-.form-group .form-label {
-  font-size: 1em;
-  color: #ccc;
-  display: block;
-  opacity: 1;
-  -webkit-transform: translate(0.5em, -1.5em);
-          transform: translate(0.5em, -1.5em);
-  -webkit-transform-origin: 0 0;
-          transform-origin: 0 0;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.form-group .form-control {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  border: 1px solid #d1d1d1;
-  border-radius: 0.5em;
+.form-group input,
+.form-group textarea {
   width: 100%;
-  padding: 0.5em;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-.form-group .form-control::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.form-group .form-control:-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-group .form-control::-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-group .form-control::placeholder {
-  color: transparent;
-}
-
-.form-group .form-control:focus {
+  position: absolute;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   -webkit-box-shadow: none;
           box-shadow: none;
   outline: none;
+  border: 1px solid #d1d1d1;
+  border-radius: 0.5em;
+}
+
+.form-group label {
+  position: absolute;
+  color: #d1d1d1;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.form-group input:focus,
+.form-group input:valid,
+.form-group textarea:focus,
+.form-group textarea:valid {
   border-color: black;
 }
 
-.form-group .form-control:focus + .form-label {
-  -webkit-transform: translateY(-3em) scale(0.8);
-          transform: translateY(-3em) scale(0.8);
+.form-group input:focus ~ label,
+.form-group input:valid ~ label,
+.form-group textarea:focus ~ label,
+.form-group textarea:valid ~ label {
   color: black;
+  font-weight: bold;
+  top: inherit;
 }
 
-.form-group .form-control:focus-within {
-  -webkit-transform: scale(1.05, 1.05);
-          transform: scale(1.05, 1.05);
+.form-group.-sm label,
+.form-group.-sm input,
+.form-group.-sm textarea {
+  font-size: 0.7rem;
+  padding: 0.4rem;
 }
 
-.form-group .form-control:not + .form-label {
-  -webkit-transform: translateY(-2.5em) scale(0.8);
-          transform: translateY(-2.5em) scale(0.8);
+.form-group.-sm input:focus ~ label,
+.form-group.-sm textarea:focus ~ label,
+.form-group.-sm input:valid ~ label,
+.form-group.-sm textarea:valid ~ label {
+  top: -1.3rem !important;
 }
 
-.form-group.fst .form-control:focus {
+.form-group.-md label,
+.form-group.-md input,
+.form-group.-md textarea {
+  font-size: 0.8rem;
+  padding: 0.5rem;
+}
+
+.form-group.-md input:focus ~ label,
+.form-group.-md textarea:focus ~ label,
+.form-group.-md input:valid ~ label,
+.form-group.-md textarea:valid ~ label {
+  top: -1.5rem !important;
+}
+
+.form-group.-lg label,
+.form-group.-lg input,
+.form-group.-lg textarea {
+  font-size: 0.9rem;
+  padding: 0.6rem;
+}
+
+.form-group.-lg input:focus ~ label,
+.form-group.-lg textarea:focus ~ label,
+.form-group.-lg input:valid ~ label,
+.form-group.-lg textarea:valid ~ label {
+  top: -1.7rem !important;
+}
+
+.form-group.fst input:focus,
+.form-group.fst input:valid,
+.form-group.fst textarea:focus,
+.form-group.fst textarea:valid {
   border-color: #264653;
 }
 
-.form-group.fst .form-control:focus + .form-label {
+.form-group.fst input:focus ~ label,
+.form-group.fst input:valid ~ label,
+.form-group.fst textarea:focus ~ label,
+.form-group.fst textarea:valid ~ label {
   color: #264653;
+  font-weight: bold;
+  top: inherit;
 }
 
-.form-group.snd .form-control:focus {
+.form-group.snd input:focus,
+.form-group.snd input:valid,
+.form-group.snd textarea:focus,
+.form-group.snd textarea:valid {
   border-color: #2A9D8F;
 }
 
-.form-group.snd .form-control:focus + .form-label {
+.form-group.snd input:focus ~ label,
+.form-group.snd input:valid ~ label,
+.form-group.snd textarea:focus ~ label,
+.form-group.snd textarea:valid ~ label {
   color: #2A9D8F;
+  font-weight: bold;
+  top: inherit;
 }
 
-.form-group.trd .form-control:focus {
+.form-group.trd input:focus,
+.form-group.trd input:valid,
+.form-group.trd textarea:focus,
+.form-group.trd textarea:valid {
   border-color: #E9C46A;
 }
 
-.form-group.trd .form-control:focus + .form-label {
+.form-group.trd input:focus ~ label,
+.form-group.trd input:valid ~ label,
+.form-group.trd textarea:focus ~ label,
+.form-group.trd textarea:valid ~ label {
   color: #E9C46A;
+  font-weight: bold;
+  top: inherit;
 }
 
-.form-group.fth .form-control:focus {
+.form-group.fth input:focus,
+.form-group.fth input:valid,
+.form-group.fth textarea:focus,
+.form-group.fth textarea:valid {
   border-color: #F4A261;
 }
 
-.form-group.fth .form-control:focus + .form-label {
+.form-group.fth input:focus ~ label,
+.form-group.fth input:valid ~ label,
+.form-group.fth textarea:focus ~ label,
+.form-group.fth textarea:valid ~ label {
   color: #F4A261;
+  font-weight: bold;
+  top: inherit;
 }
 
-.form-group.fifth .form-control:focus {
+.form-group.fifth input:focus,
+.form-group.fifth input:valid,
+.form-group.fifth textarea:focus,
+.form-group.fifth textarea:valid {
   border-color: #E76F51;
 }
 
-.form-group.fifth .form-control:focus + .form-label {
+.form-group.fifth input:focus ~ label,
+.form-group.fifth input:valid ~ label,
+.form-group.fifth textarea:focus ~ label,
+.form-group.fifth textarea:valid ~ label {
   color: #E76F51;
+  font-weight: bold;
+  top: inherit;
 }
 
 html,
