--- a/css/mixins/_form-element-size.scss
+++ b/css/mixins/_form-element-size.scss
@@ -1,15 +1,17 @@
 @mixin formElementSize($fontSize, $padding, $top) {
-  label,
-  input,
-  textarea {
-    font-size: $fontSize;
-    padding: $padding;
-  }
+  .form-group-item {
+    label,
+    input,
+    textarea {
+      font-size: $fontSize;
+      padding: $padding;
+    }
 
-  input:focus ~ label,
-  textarea:focus ~ label,
-  input:valid ~ label,
-  textarea:valid ~ label {
-    top: $top !important;
+    input:focus ~ label,
+    textarea:focus ~ label,
+    input:valid ~ label,
+    textarea:valid ~ label {
+      top: $top !important;
+    }
   }
 }
