--- a/css/main.css
+++ b/css/main.css
@@ -331,12 +331,17 @@
 }
 
 .form-group {
-  position: relative;
+  display: inline-block;
+  width: 100%;
   margin-bottom: 2rem;
 }
 
-.form-group input,
-.form-group textarea {
+.form-group .form-group-item {
+  position: relative;
+}
+
+.form-group .form-group-item input,
+.form-group .form-group-item textarea {
   width: 100%;
   position: absolute;
   -webkit-box-sizing: border-box;
@@ -348,146 +353,151 @@
   border-radius: 0.5em;
 }
 
-.form-group label {
+.form-group .form-group-item label {
   position: absolute;
   color: #d1d1d1;
   -webkit-transition: 1s;
   transition: 1s;
 }
 
-.form-group input:focus,
-.form-group input:valid,
-.form-group textarea:focus,
-.form-group textarea:valid {
+.form-group .form-group-item textarea {
+  overflow: hidden;
+  resize: both;
+}
+
+.form-group .form-group-item input:focus,
+.form-group .form-group-item input:valid,
+.form-group .form-group-item textarea:focus,
+.form-group .form-group-item textarea:valid {
   border-color: black;
 }
 
-.form-group input:focus ~ label,
-.form-group input:valid ~ label,
-.form-group textarea:focus ~ label,
-.form-group textarea:valid ~ label {
+.form-group .form-group-item input:focus ~ label,
+.form-group .form-group-item input:valid ~ label,
+.form-group .form-group-item textarea:focus ~ label,
+.form-group .form-group-item textarea:valid ~ label {
   color: black;
   font-weight: bold;
   top: inherit;
 }
 
-.form-group.-sm label,
-.form-group.-sm input,
-.form-group.-sm textarea {
+.form-group.-sm .form-group-item label,
+.form-group.-sm .form-group-item input,
+.form-group.-sm .form-group-item textarea {
   font-size: 0.7rem;
   padding: 0.4rem;
 }
 
-.form-group.-sm input:focus ~ label,
-.form-group.-sm textarea:focus ~ label,
-.form-group.-sm input:valid ~ label,
-.form-group.-sm textarea:valid ~ label {
+.form-group.-sm .form-group-item input:focus ~ label,
+.form-group.-sm .form-group-item textarea:focus ~ label,
+.form-group.-sm .form-group-item input:valid ~ label,
+.form-group.-sm .form-group-item textarea:valid ~ label {
   top: -1.3rem !important;
 }
 
-.form-group.-md label,
-.form-group.-md input,
-.form-group.-md textarea {
+.form-group.-md .form-group-item label,
+.form-group.-md .form-group-item input,
+.form-group.-md .form-group-item textarea {
   font-size: 0.8rem;
   padding: 0.5rem;
 }
 
-.form-group.-md input:focus ~ label,
-.form-group.-md textarea:focus ~ label,
-.form-group.-md input:valid ~ label,
-.form-group.-md textarea:valid ~ label {
+.form-group.-md .form-group-item input:focus ~ label,
+.form-group.-md .form-group-item textarea:focus ~ label,
+.form-group.-md .form-group-item input:valid ~ label,
+.form-group.-md .form-group-item textarea:valid ~ label {
   top: -1.5rem !important;
 }
 
-.form-group.-lg label,
-.form-group.-lg input,
-.form-group.-lg textarea {
+.form-group.-lg .form-group-item label,
+.form-group.-lg .form-group-item input,
+.form-group.-lg .form-group-item textarea {
   font-size: 0.9rem;
   padding: 0.6rem;
 }
 
-.form-group.-lg input:focus ~ label,
-.form-group.-lg textarea:focus ~ label,
-.form-group.-lg input:valid ~ label,
-.form-group.-lg textarea:valid ~ label {
+.form-group.-lg .form-group-item input:focus ~ label,
+.form-group.-lg .form-group-item textarea:focus ~ label,
+.form-group.-lg .form-group-item input:valid ~ label,
+.form-group.-lg .form-group-item textarea:valid ~ label {
   top: -1.7rem !important;
 }
 
-.form-group.fst input:focus,
-.form-group.fst input:valid,
-.form-group.fst textarea:focus,
-.form-group.fst textarea:valid {
+.form-group.fst .form-group-item input:focus,
+.form-group.fst .form-group-item input:valid,
+.form-group.fst .form-group-item textarea:focus,
+.form-group.fst .form-group-item textarea:valid {
   border-color: #264653;
 }
 
-.form-group.fst input:focus ~ label,
-.form-group.fst input:valid ~ label,
-.form-group.fst textarea:focus ~ label,
-.form-group.fst textarea:valid ~ label {
+.form-group.fst .form-group-item input:focus ~ label,
+.form-group.fst .form-group-item input:valid ~ label,
+.form-group.fst .form-group-item textarea:focus ~ label,
+.form-group.fst .form-group-item textarea:valid ~ label {
   color: #264653;
   font-weight: bold;
   top: inherit;
 }
 
-.form-group.snd input:focus,
-.form-group.snd input:valid,
-.form-group.snd textarea:focus,
-.form-group.snd textarea:valid {
+.form-group.snd .form-group-item input:focus,
+.form-group.snd .form-group-item input:valid,
+.form-group.snd .form-group-item textarea:focus,
+.form-group.snd .form-group-item textarea:valid {
   border-color: #2A9D8F;
 }
 
-.form-group.snd input:focus ~ label,
-.form-group.snd input:valid ~ label,
-.form-group.snd textarea:focus ~ label,
-.form-group.snd textarea:valid ~ label {
+.form-group.snd .form-group-item input:focus ~ label,
+.form-group.snd .form-group-item input:valid ~ label,
+.form-group.snd .form-group-item textarea:focus ~ label,
+.form-group.snd .form-group-item textarea:valid ~ label {
   color: #2A9D8F;
   font-weight: bold;
   top: inherit;
 }
 
-.form-group.trd input:focus,
-.form-group.trd input:valid,
-.form-group.trd textarea:focus,
-.form-group.trd textarea:valid {
+.form-group.trd .form-group-item input:focus,
+.form-group.trd .form-group-item input:valid,
+.form-group.trd .form-group-item textarea:focus,
+.form-group.trd .form-group-item textarea:valid {
   border-color: #E9C46A;
 }
 
-.form-group.trd input:focus ~ label,
-.form-group.trd input:valid ~ label,
-.form-group.trd textarea:focus ~ label,
-.form-group.trd textarea:valid ~ label {
+.form-group.trd .form-group-item input:focus ~ label,
+.form-group.trd .form-group-item input:valid ~ label,
+.form-group.trd .form-group-item textarea:focus ~ label,
+.form-group.trd .form-group-item textarea:valid ~ label {
   color: #E9C46A;
   font-weight: bold;
   top: inherit;
 }
 
-.form-group.fth input:focus,
-.form-group.fth input:valid,
-.form-group.fth textarea:focus,
-.form-group.fth textarea:valid {
+.form-group.fth .form-group-item input:focus,
+.form-group.fth .form-group-item input:valid,
+.form-group.fth .form-group-item textarea:focus,
+.form-group.fth .form-group-item textarea:valid {
   border-color: #F4A261;
 }
 
-.form-group.fth input:focus ~ label,
-.form-group.fth input:valid ~ label,
-.form-group.fth textarea:focus ~ label,
-.form-group.fth textarea:valid ~ label {
+.form-group.fth .form-group-item input:focus ~ label,
+.form-group.fth .form-group-item input:valid ~ label,
+.form-group.fth .form-group-item textarea:focus ~ label,
+.form-group.fth .form-group-item textarea:valid ~ label {
   color: #F4A261;
   font-weight: bold;
   top: inherit;
 }
 
-.form-group.fifth input:focus,
-.form-group.fifth input:valid,
-.form-group.fifth textarea:focus,
-.form-group.fifth textarea:valid {
+.form-group.fifth .form-group-item input:focus,
+.form-group.fifth .form-group-item input:valid,
+.form-group.fifth .form-group-item textarea:focus,
+.form-group.fifth .form-group-item textarea:valid {
   border-color: #E76F51;
 }
 
-.form-group.fifth input:focus ~ label,
-.form-group.fifth input:valid ~ label,
-.form-group.fifth textarea:focus ~ label,
-.form-group.fifth textarea:valid ~ label {
+.form-group.fifth .form-group-item input:focus ~ label,
+.form-group.fifth .form-group-item input:valid ~ label,
+.form-group.fifth .form-group-item textarea:focus ~ label,
+.form-group.fifth .form-group-item textarea:valid ~ label {
   color: #E76F51;
   font-weight: bold;
   top: inherit;
